# services/api/alembic/versions/5b14a9f27911_document_ingestion_fields.py
@@ -1,0 +1,50 @@
+"""document_ingestion_fields
+
+Revision ID: 5b14a9f27911
+Revises: 44d5c5ca3f11
+Create Date: 2026-09-07 13:54:33.773074
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = '5b14a9f27911'
+down_revision: Union[str, None] = '44d5c5ca3f11'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    with op.batch_alter_table('documents', schema=None) as batch_op:
+        batch_op.add_column(sa.Column('tender_id', sa.String(), nullable=True))
+        batch_op.add_column(sa.Column('content_type', sa.String(), nullable=True))
+        batch_op.add_column(sa.Column('size_bytes', sa.Integer(), nullable=True))
+        batch_op.alter_column('bidder_id',
+               existing_type=sa.VARCHAR(),
+               nullable=True)
+        batch_op.create_index(batch_op.f('ix_documents_sha256'), ['sha256'], unique=False)
+        batch_op.create_index(batch_op.f('ix_documents_tender_id'), ['tender_id'], unique=False)
+        batch_op.create_foreign_key('fk_documents_tender_id_tenders', 'tenders', ['tender_id'], ['id'])
+
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    with op.batch_alter_table('documents', schema=None) as batch_op:
+        batch_op.drop_constraint('fk_documents_tender_id_tenders', type_='foreignkey')
+        batch_op.drop_index(batch_op.f('ix_documents_tender_id'))
+        batch_op.drop_index(batch_op.f('ix_documents_sha256'))
+        batch_op.alter_column('bidder_id',
+               existing_type=sa.VARCHAR(),
+               nullable=False)
+        batch_op.drop_column('size_bytes')
+        batch_op.drop_column('content_type')
+        batch_op.drop_column('tender_id')
+
+    # ### end Alembic commands ###
